tests/ui/resolve/issue-117920.stderr
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> $DIR/issue-117920.rs:3:5
   |
LL | use super::A;
   |     ^^^^^ there are too many leading `super` keywords

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
